# rag-chatbot

./: .gitignore  README.md  main.py  pyproject.toml
app/: app.py  schemas.py
frontend/static/: app.js
frontend/templates/: index.html
rag/: rag.py
src/llm/: base.py  gemini.py
src/prompt/: prompt_manager.py
